--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Staatliches"
+      href="https://fonts.googleapis.com/css?family=Raleway"
     />
 
     <title><%= htmlWebpackPlugin.options.title %></title>
