--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
     </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="background-color: black; min-height: 100vh;">
+  <body style="min-height: 100vh;" class="uk-background-secondary">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
