--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,13 +11,16 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap" rel="stylesheet">
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Raleway"
     />
     <style>
         body {
-            font-family: Raleway, Arial;
+            font-family: "Gideon Roman", Raleway, Arial;
         }
     </style>
     <title>Loading...</title>
