--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,14 +13,14 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Raleway"
     />
     <style>
         body {
-            font-family: "Gideon Roman", Raleway, Arial;
+            font-family: "Roboto", Raleway, Arial;
         }
     </style>
     <title>Loading...</title>
