--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,14 +13,11 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Raleway"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: "Roboto", Raleway, Arial;
+            font-family: "Abel", Arial;
         }
     </style>
     <title>Loading...</title>
