add augustus font

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,14 +13,17 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap" rel="stylesheet">
+<!--    <link-->
+<!--            rel="stylesheet"-->
+<!--            href="https://fonts.googleapis.com/css?family=Raleway"-->
+<!--    />-->
     <link
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Raleway"
+            href="/augustus.css"
     />
     <style>
         body {
-            font-family: "Gideon Roman", Raleway, Arial;
+            font-family: "Times New Roman", Times, Arial;
         }
     </style>
     <title>Loading...</title>
