--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,17 +13,10 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!--    <link-->
-<!--            rel="stylesheet"-->
-<!--            href="https://fonts.googleapis.com/css?family=Raleway"-->
-<!--    />-->
-    <link
-            rel="stylesheet"
-            href="/augustus.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: "Times New Roman", Times, Arial;
+            font-family: Roboto, "Times New Roman", Times, Arial;
         }
     </style>
     <title>Loading...</title>
