--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,16 +4,38 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    
+    <!-- Standard Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/path/to/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/path/to/favicon-16x16.png">
+
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/path/to/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/path/to/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/path/to/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/path/to/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/path/to/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/path/to/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/path/to/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/path/to/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/path/to/apple-icon-180x180.png">
+
+    <!-- Android Chrome Icon -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/path/to/android-icon-192x192.png">
+
+    <!-- Favicon for Microsoft Tiles -->
+    <meta name="msapplication-TileImage" content="/path/to/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+
+    <!-- Additional Favicon Settings -->
+    <link rel="manifest" href="/path/to/manifest.json">
+    <meta name="theme-color" content="#ffffff">
+
     <style>
         body {
             font-family: Roboto, "Times New Roman", Times, Arial;
