--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,29 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     
     <!-- Standard Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/path/to/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/path/to/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/path/to/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/path/to/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/path/to/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/path/to/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/path/to/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/path/to/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/path/to/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/path/to/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/path/to/apple-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
 
     <!-- Android Chrome Icon -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/path/to/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
 
     <!-- Favicon for Microsoft Tiles -->
-    <meta name="msapplication-TileImage" content="/path/to/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="msapplication-TileColor" content="#ffffff">
 
     <!-- Additional Favicon Settings -->
-    <link rel="manifest" href="/path/to/manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
 
     <style>
