--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,18 +12,15 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!--    <link-->
-<!--            rel="stylesheet"-->
-<!--            href="https://fonts.googleapis.com/css?family=Raleway"-->
-<!--    />-->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
     <link
             rel="stylesheet"
             href="/augustus.css"
     />
     <style>
         body {
-            font-family: "Times New Roman", Times, Arial;
+            font-family: "Mrs Saint Delafield", Times, Arial;
         }
     </style>
     <title>Loading...</title>
