--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,11 +27,12 @@
         }
     </style>
     <title>Loading...</title>
+    <script type="module" src="/src/main.js"></script>
 </head>
 <body style="min-height: 100vh;" class="uk-background-secondary">
 <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong>
+   <strong>We're sorry but this app doesn't work properly without JavaScript enabled.
+  Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
